css: fix disposition when screen becomes too small

--- a/content/media/css/oasis.4.images.less
+++ b/content/media/css/oasis.4.images.less
@@ -42,7 +42,7 @@ article {
     }
 }
 
-@media only screen and (max-width: @page-width) {
+@media only screen and (max-width: @more-width) {
     article {
 	img {
 	    float: none;
